--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "「他单纯只想把日子过得不浪费」"
+description: "「光阴不可测，岁月亦无歌。」"
 header-img: "img/bg-me-2022.jpg"
 header-mask: 0.3
 multilingual: true
