--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: "「我干了什么 究竟拿了时间换了什么」"
+description: "「光阴不可测，岁月亦无歌。」"
 header-img: "img/bg-little-universe.jpg"
 ---
 
