--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "「光阴不可测，岁月亦无歌。」"
-header-img: "img/bg-me-2022.jpg"
+header-img: "img/bg/2.jpg"
 header-mask: 0.3
 multilingual: true
 ---
