--- a/archive.html
+++ b/archive.html
@@ -2,7 +2,7 @@
 title: Archive
 layout: default
 description: "「光阴不可测，岁月亦无歌。」"
-header-img: "img/bg-little-universe.jpg"
+header-img: "img/bg/3.jpg"
 ---
 
 <!--
