--- a/project/index.html
+++ b/project/index.html
@@ -2,12 +2,12 @@
 
 <h2>unlock music</h2>
 
-<p><a href="/unlock-music">此处</a>。</p>
+<p><a href="/project/unlock-music">此处</a>。</p>
 
 <p>用于解锁各大平台的加密歌曲。</p>
 
 <h2>html music player</h2>
 
-<p><a href="/html-music-player">此处</a>。</p>
+<p><a href="/project/html-music-player">此处</a>。</p>
 
 <p>建设中。</p>
