--- a/project/html-music-player/index.html
+++ b/project/html-music-player/index.html
@@ -16,7 +16,7 @@
         </header>
         <div class="wrapper">
             <div id="player">
-                <audio controls id="audio" src="./content/songs/na_ge.mp3">!audio not supported :(</audio>
+                <audio controls id="audio" src="/music/1.mp3">歌曲加载失败，请检查网络连接或缓存。</audio>
             </div>
             <div id="playlist">
                 <ol>
