--- a/project/XPlayer/index.html
+++ b/project/XPlayer/index.html
@@ -26,7 +26,7 @@
                     <div id="songinfo_artist"></div>
                 </div>
             </div>
-            <div id="player">
+            <!-- <div id="player"> -->
                 <!-- instead of the default player because of the difference between the different browser -->
                 <div class="audio-wrapper">
                     <audio autoplay="autoplay" id="audio">歌曲加载失败，请检查网络连接或缓存。</audio>
@@ -47,7 +47,7 @@
                 </div>
                 
                 <script src="js/audio.js"></script>
-            </div>
+            <!-- </div> -->
             <div id="playlist">
                 <ol>
                 </ol>
