--- a/project/XPlayer/index.html
+++ b/project/XPlayer/index.html
@@ -64,24 +64,29 @@
                 </div>
             </div>
         </div>
-        <div id="menu-playmode" class="menu-item">
-            <div class="menu-title">切歌顺序</div>
-            <div class="menu-content">
-                <p>
-                <span id="menu_order" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="playmode_change('order')">顺序播放</span>
-                <span id="menu_reverse" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="playmode_change('reverse')">倒序播放</span>
-                <span id="menu_random" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="playmode_change('random')">随机播放</span>
-                </p>
-            </div>
+        <div id="controls">
+            <span id="menu-playmode" class="menu-item">
+                <div class="menu-title">切歌顺序</div>
+                <div class="menu-content">
+                    <p>
+                    <span id="menu_order" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="playmode_change('order')">顺序播放</span>
+                    <span id="menu_reverse" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="playmode_change('reverse')">倒序播放</span>
+                    <span id="menu_random" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="playmode_change('random')">随机播放</span>
+                    <span id="menu_loop" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="playmode_change('loop')">单曲循环</span>
+                    </p>
+                </div>
+            </span>
+            <span id="menu-font" class="menu-item">
+                <div class="menu-title">字体</div>
+                <div class="menu-content">
+                    <p>
+                    <span id="menu_font_default" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="font_change('default')">默认</span>
+                    <span id="menu_font_kaiti" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="font_change('kaiti')">楷体</span>
+                    <span id="menu_font_songti" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="font_change('songti')">宋体</span>
+                    </p>
+                </div>
+            </span>
         </div>
-        <!-- <div id="menu-fontFamily" class="menu-item">
-            <div class="menu-title">字体</div>
-            <div class="menu-content">
-                <p>
-                <span id="menu_order" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="fontFamily_change('songti')">宋体</span>
-                </p>
-            </div>
-        </div> -->
 
         <script src="js/jquery.min.js"></script>
         <!-- Responsive Design -->
