--- a/project/XPlayer/index.html
+++ b/project/XPlayer/index.html
@@ -80,9 +80,11 @@
                 <div class="menu-title">字体</div>
                 <div class="menu-content">
                     <p>
-                    <span id="menu_font_default" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="font_change('default')">默认</span>
+                    <span id="menu_font_fordefault" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="font_change('fordefault')">默认</span>
                     <span id="menu_font_kaiti" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="font_change('kaiti')">楷体</span>
                     <span id="menu_font_songti" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="font_change('songti')">宋体</span>
+                    <span id="menu_font_huawenxingkai" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="font_change('huawenxingkai')">华文行楷</span>
+                    <span id="menu_font_youyuan" onmouseover="menu_color_change(this,1)" onmouseout="menu_color_change(this,2)" onclick="font_change('youyuan')">幼圆</span>
                     </p>
                 </div>
             </span>
