--- a/project/XPlayer/index.html
+++ b/project/XPlayer/index.html
@@ -33,7 +33,7 @@
                     <div id="songinfo_album"></div>
                 </div>
             </div>
-            <div onmouseover = "player_opacity()" onmouseout="player_opacity()" id="player">
+            <div onmouseover = "player_opacity(0)" onmouseout="player_opacity(1)" id="player">
                 <!-- instead of the default player because of the difference between the different browser -->
                 <div class="audio-wrapper">
                     <audio autoplay="autoplay" id="audio">歌曲加载失败，请检查网络连接或缓存。</audio>
