--- a/project/XPlayer/index.html
+++ b/project/XPlayer/index.html
@@ -40,7 +40,7 @@
             <div onmouseover = "player_opacity(0)" onmouseout="player_opacity(1)" id="player">
                 <!-- instead of the default player because of the difference between the different browser -->
                 <div class="audio-wrapper">
-                    <audio autoplay="autoplay" preload="auto" id="audio">歌曲加载失败，请检查网络连接或缓存。</audio>
+                    <audio autoplay="autoplay" preload="auto" id="audio" crossorigin="anonymous">歌曲加载失败，请检查网络连接或缓存。</audio>
                     <div class="audio-left">
                         <img id="audioPlayer0" src="./img/play.png">
                     </div>
